# ShieldScan

./: .gitignore  .shieldscan.yaml.example  .shieldscanignore.yaml.example  CHANGELOG.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  sample_vulnerable.js  sample_vulnerable.py  scanner.py
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_scan.py
rules/: rules.yaml
schemas/: config-v1.schema.json  report-v1.schema.json
shieldscan/: __init__.py  constants.py
tests/: test_cli.py  test_scanner.py
